--- a/task4/package.json
+++ b/task4/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@mui/x-data-grid": "^5.8.0",
+    "@mui/x-data-grid-generator": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -29,6 +31,8 @@
     "react-scripts": "5.0.0",
     "react-simple-star-rating": "^4.0.5",
     "typescript": "^4.6.2",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
