--- a/task4/package.json
+++ b/task4/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "axios": "^0.26.1",
+    "date-and-time": "^2.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^4.0.0",
